# feature_selector

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: data.h  nn.h  selection.h
